force-app/main/default/objects/MaintenancePlan/fields/HRCFSL_ModList__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_ModList__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Action/Mod</label>
    <referenceTo>HRCFSL_ModList__c</referenceTo>
    <relationshipLabel>Maintenance Plans</relationshipLabel>
    <relationshipName>Maintenance_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>