force-app/main/default/objects/MaintenancePlan/fields/HRCFSL_Product_Model__c.field-meta.xml
<CustomField>
    <fullName>HRCFSL_Product_Model__c</fullName>
    <description>The product model that is associated with this corrective action. Can be used to autogenerate Work Orders for every Asset that has this model.</description>
    <label>Product Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>