force-app/main/default/objects/MaintenancePlan/fields/HRCSVC_Field_Action_Mod_Description__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Field_Action_Mod_Description__c</fullName>
    <description>SE-257 - Field Action/Mod Description will populate based on the what is selected in the lookup</description>
    <formula>HRCFSL_ModList__r.HRCSVC_Description__c</formula>
    <label>Field Action/Mod Description</label>
    <type>Text</type>
</CustomField>