force-app/main/default/objects/MaintenancePlan/fields/HRCSVC_Maintenance_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Maintenance_Plan_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maintenance Plan Template</label>
    <referenceTo>HRCSVC_Maintenance_Plan_Template__c</referenceTo>
    <relationshipLabel>Maintenance Plans</relationshipLabel>
    <relationshipName>Maintenance_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>